@@ -5,8 +5,8 @@ DIST MesaLib-7.10.tar.bz2 5842557 RMD160 211011257228352dd305b589f0eab3854a2b7e4
 DIST MesaLib-7.9.1.tar.bz2 5640520 RMD160 5d83557160dc13f98647889bab351712c7b67316 SHA1 a442f77072c690ccd8c2659664929684f74d82fd SHA256 403986cd83d957db17957f11c320c9562cc8675273efbaa402e88bf4e6586721
 DIST MesaLib-7.9.tar.bz2 5678494 RMD160 4aad7da22324556dcd3e833d149d8ae8de1fce7d SHA1 5afc7f6f4ee02a1ca39f29ef261cc14e8787d892 SHA256 e0cd67f4516d809e18fbc85dc721e84217d524d77d815b59e0c7c2d7ea1129f3
 DIST mesa-7.9.1-gentoo-patches-01.tar.bz2 2139 RMD160 9db0129c3aca3ed63c0b6665ac2f061997364c05 SHA1 b41022dfcf554d8460c96804d3d97224d05e7607 SHA256 b2b593a3cc529913a34a59c017dad4a51ae82e8b2dd4bf333a52260c3cab0aa1
-EBUILD mesa-7.10-r1.ebuild 9462 RMD160 d359cf7b2ac24ee41d9ca61bacc1ee742f5b81bb SHA1 7a2a51230f6ee9bf90989adb5fa85c1dab0ae4f6 SHA256 3faa2936adafaa91d8423d25631765e3068312c811a0d3e6c4260ce14a4782b7
-EBUILD mesa-7.9.1.ebuild 8821 RMD160 beedeb03f34c55a27fccaa568d8265e4d76fd8ab SHA1 56169630053af509bb7f27f4c28f9b1c65248165 SHA256 f316caee6abd896db16fe2e1c801ca96f2c346d8fc13166fe43e5a30216eab31
+EBUILD mesa-7.10-r1.ebuild 9511 RMD160 70146a25ed6e01b4709785496348c3d8f401e9cf SHA1 7aaaa5805063b1fbad9c2a1fda41c2c118651816 SHA256 802dd3b6ad38f51377545296cd26a75d26bd6e3731cbee6f32eb151d0bd16f96
+EBUILD mesa-7.9.1.ebuild 8876 RMD160 92abfc9556fafa207f83f3e3b8e51b700f213ecb SHA1 88709c7ba0411c28795a4769fbc2cbc3c43e8c76 SHA256 758dfd7efcf6639bac148c3a105c494c7dd25f71d761bfdab3f799eeb0ba35c4
 EBUILD mesa-7.9.ebuild 8870 RMD160 9c0b094243e217077373c8b9c9569e3bbd1bf212 SHA1 0fb00ac71a09c8c95346a2b3b9aeb69aab87e5e3 SHA256 460449c3618cca7402c120be735d43661cf040499c6d5c06070e7aa5dc67c365
-MISC ChangeLog 53281 RMD160 0a665c8a16cdda83db85132b32d7ec7095acd188 SHA1 013325272dc7570a9e3069158646f81f50bafa3c SHA256 37a320021b942c0c61ed0a163620ad9d6544b7c88999ba0d76019d69908c5b4e
+MISC ChangeLog 53443 RMD160 d69ec0fe2aa8dd6cad4a9dea4ddbde40bde15397 SHA1 bf3b7cd8eaf807b2285419fe7e94afae28ba7540 SHA256 24837e8df749d841fad7d8e32ee71b5f03c29069fa0a81720f8a93433888313d
 MISC metadata.xml 560 RMD160 7c8109dd5de8c3a809ae27690d50f9d85e201ac9 SHA1 6d640e373282205f6755c647bb907e9b66ab390a SHA256 67727cfae939284efe0ce0a48b1c5d54193bf5bf1c63f9b41b621dbc937f9f37
