@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/mesa-7.9.1.ebuild,v 1.5 2011/02/23 16:22:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/mesa-7.9.1.ebuild,v 1.6 2011/03/03 00:04:47 chithanh Exp $
 
 EAPI=3
 
@@ -75,6 +75,7 @@ RDEPEND="
 		)
 	)
 	${LIBDRM_DEPSTRING}[video_cards_nouveau?,video_cards_vmware?]
+	video_cards_nouveau? ( <x11-libs/libdrm-2.4.24 )
 "
 for card in ${INTEL_CARDS}; do
 	RDEPEND="${RDEPEND}
